--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 # @global-owner1 and @global-owner2 will be requested for
 # review when someone opens a pull request.
 #*       @global-owner1 @global-owner2
-*       @terry-klaytn @neoofklaytn @toniya-klaytn @chloe-klatyn
+*       @kjhman21 @terry-klaytn @neoofklaytn @toniya-klaytn @chloe-klatyn
 
 # Order is important; the last matching pattern takes the most
 # precedence. When someone opens a pull request that only
